--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </nav>
     </div>
     <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="https://images-ext-2.discordapp.net/external/IK0degOIWkZdZEsMwMul7vAK1e42eq_X_HKulNE94fo/https/media.discordapp.net/attachments/901903743107342448/902296200974319696/D64F16AE-D156-407D-B260-805EE1287096.jpg" width="150" height="150" style="margin-top: 30px;">
-        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Meow Music</h1>
-        <p style="color: var(--secondary-text-color);">Listening to your best songs with Meow Music</p>
+        <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Music Mixer</h1>
+        <p style="color: var(--secondary-text-color);">Best Muisc Discord Bot</p>
         <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/api/oauth2/authorize?client_id=794288634659995659&permissions=3529792&scope=bot" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
 	
 	<a class="btn btn-primary smoothScroll shadow-none" role="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;"
@@ -49,19 +49,19 @@
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div id="features" class="box" style="/*border-radius: 34px;*/"><i class="fa fa-bolt icon" style="color: var(--main-color);"></i>
                         <h3 class="name">Fast</h3>
-                        <p class="description" style="color: var(--secondary-text-color);">24/7 Music Bot<br></p>
+                        <p class="description" style="color: var(--secondary-text-color);">24/7 host Music mixer<br></p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div id="features" class="box"><i class="fa fa-lock icon" style="color: var(--main-color);"></i>
                         <h3 class="name">Secure</h3>
-                        <p class="description" style="color: var(--secondary-text-color);">Meow Music is one of the best Discord bots you can enjoy your special songs with our bot<br></p>
+                        <p class="description" style="color: var(--secondary-text-color);">Music Mixer Is One<br></p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div id="features" class="box"><i class="fa fa-smile-o icon" style="color: var(--main-color);"></i>
                         <h3 class="name">Happy Users</h3>
-                        <p class="description" style="color: var(--secondary-text-color);">Our bot is used by most people and so far no one has criticized Meow Music<br></p>
+                        <p class="description" style="color: var(--secondary-text-color);">best music botc<br></p>
                     </div>
                 </div>
             </div>
