--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Meow Music</title>
+    <title>Music Mixer</title>
     <meta name="description" content="idk something about ur bot goes here">
     <meta name="theme-color" content="#f54254">
     <link rel="icon" type="image/png" sizes="300x250" href="assets/img/superthumb.png">
@@ -19,7 +19,7 @@
 <body style="background-color: var(--background);">
     <div id="top" style="height: 12px;">
         <nav class="navbar navbar-light navbar-expand fixed-top" style="color: var(--main-color);border-top-width: 6px;border-top-style: solid;background: var(--background);">
-            <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color);font-family: 'Alfa Slab One', cursive;">Meow Music</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+            <div class="container-fluid"><a class="navbar-brand" href="#" style="color: var(--main-color);font-family: 'Alfa Slab One', cursive;">Music Mixer</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
                 <div
                     class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav">
@@ -34,7 +34,7 @@
     <header class="d-xl-flex flex-column justify-content-xl-center align-items-xl-center" style="height: 418px;text-align: center;margin: 55px;"><img class="rounded" src="https://images-ext-2.discordapp.net/external/IK0degOIWkZdZEsMwMul7vAK1e42eq_X_HKulNE94fo/https/media.discordapp.net/attachments/901903743107342448/902296200974319696/D64F16AE-D156-407D-B260-805EE1287096.jpg" width="150" height="150" style="margin-top: 30px;">
         <h1 class="d-xl-flex justify-content-xl-start" style="color: var(--text-color);">Music Mixer</h1>
         <p style="color: var(--secondary-text-color);">Best Muisc Discord Bot</p>
-        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/api/oauth2/authorize?client_id=794288634659995659&permissions=3529792&scope=bot" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
+        <div class="tada animated"><div role="group" class="btn-group">    <a href="https://discord.com/api/oauth2/authorize?client_id=904125815413960786&permissions=8&scope=bot" class="btn btn-primary shadow-none" type="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;">Invite Me</a>
 	
 	<a class="btn btn-primary smoothScroll shadow-none" role="button" style="margin: 5px;background-color: var(--main-color);border-color: var(--main-color);border-radius: 10px;"
         href="#feature">Features</a></div></div>
@@ -55,13 +55,13 @@
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div id="features" class="box"><i class="fa fa-lock icon" style="color: var(--main-color);"></i>
                         <h3 class="name">Secure</h3>
-                        <p class="description" style="color: var(--secondary-text-color);">Music Mixer Is One<br></p>
+                        <p class="description" style="color: var(--secondary-text-color);">Music Mixer Secured Discord Music Bot <br></p>
                     </div>
                 </div>
                 <div class="col-sm-6 col-md-5 col-lg-4 item">
                     <div id="features" class="box"><i class="fa fa-smile-o icon" style="color: var(--main-color);"></i>
                         <h3 class="name">Happy Users</h3>
-                        <p class="description" style="color: var(--secondary-text-color);">best music botc<br></p>
+                        <p class="description" style="color: var(--secondary-text-color);">Most Peolpe Use Music Mixer And Rated By Everyone<br></p>
                     </div>
                 </div>
             </div>
@@ -91,7 +91,7 @@
           <div class="accordion-item">
       <button id="accordion-button-1" aria-expanded="false"><span class="accordion-title">Music Commands</span><span class="icon" aria-hidden="true"></span></button>
       <div class="accordion-content">
-        <p>!paly - <songlink> Or Song Name <br> !skip - to skip your song <br> !skipto - to <Queue Number> <br> !stop - to stop your song <br> !volume - <0-200> Volume <br> !nowplaying - now playing your song <br> !shuffle - to shuffled your song <br> !search - to search songs <br> !resume - to resume your song <br> !remove - to remove your song <br> !queue - to queue your song <br> !filters - 8D - vaprowave - nightcore - pshaser - termolo - vibrato - surrounding - pulsator - subboost - clear = removes all filters <br> !loop - to looping your song <br> !lyrics - to about your song <br> !radio</p>
+        <p>play - <songlink> Or Song Name <br> !skip - to skip your song <br> !skipto - to <Queue Number> <br> !stop - to stop your song <br> !volume - <0-200> Volume <br>  -  !radio</p>n
       </div>
     </div>
     <! --- to here :D -- >
@@ -99,7 +99,7 @@
           <div class="accordion-item">
       <button id="accordion-button-2" aria-expanded="false"><span class="accordion-title">Other Commands</span><span class="icon" aria-hidden="true"></span></button>
       <div class="accordion-content">
-        <p>!invite - to invite Meow music <br> support - to support Meow Music <br> !about - to about Meow Music <br> !ping - to ms Meow Music <br> !prefix - to setprefix in your server <br> !uptime - to update time <br> !avatar - to your avatar <br> !se - to <Emoji> <br> Giveaway - !start <time> <prize> <#channel> </p>
+        <p>.invite - to invite Music Mixer <br> .support - to support Music Mixer <br> .about - to about Music Mixer <br> .ping - to ms Meow Music  <br> .uptime - to update time <br> .avatar - to your avatar</p>
       </div>
     </div>
     <! --- to here :D -- >
@@ -112,7 +112,7 @@
                
             </p>
             <ul class="project__stack">
-              <li class="project__stack-item">CEO And Developer Bot = Monty#0404</li>
+              <li class="project__stack-item">Developer Of The Bot  MrD1MOD</li>
             </ul>
 
          <img src="https://media.discordapp.net/attachments/901903743107342448/902298364434055288/image0.gif"width="130">
@@ -127,9 +127,9 @@
             <h3 class="text-center name" style="color: var(--secondary-text-color)">Top Servers Using Our Bot!</h3>
             <div class="intro"></div>
             <div class="row row-cols-4 d-flex d-xl-flex justify-content-center justify-content-xl-center people" style="padding-bottom: 0px;">
-                <div class="col-auto col-md-6 col-lg-4 yeet"><a href="https://discord.gg/gndYM55n" target="_blank"><img class="rounded-circle partner" src="https://media.discordapp.net/attachments/901903743107342448/902298364434055288/image0.gif"></a></div>
-                <div class="col-auto col-md-6 col-lg-4 yeet"><a href="https://discord.gg/SwUTJd7ZYB" target="_blank"><img class="rounded-circle partner" src="assets/img/superthumb.png"></a></div>
-                <div class="col-auto col-md-6 col-lg-4 yeet"><a href="https://discord.gg/SwUTJd7ZYB" target="_blank"><img class="rounded-circle partner" src="https://media.discordapp.net/attachments/901903743107342448/902298364434055288/image0.gif"></a></div>
+                <div class="col-auto col-md-6 col-lg-4 yeet"><a href="https://discord.gg/KFPcupYn" target="_blank"><img class="rounded-circle partner" src="https://media.discordapp.net/attachments/901903743107342448/902298364434055288/image0.gif"></a></div>
+                <div class="col-auto col-md-6 col-lg-4 yeet"><a href="https://discord.gg/pSaPtFfxFx" target="_blank"><img class="rounded-circle partner" src="assets/img/superthumb.png"></a></div>
+                <div class="col-auto col-md-6 col-lg-4 yeet"><a href="https://discord.gg/54WasnmV" target="_blank"><img class="rounded-circle partner" src="https://media.discordapp.net/attachments/901903743107342448/902298364434055288/image0.gif"></a></div>
             </div>
         </div>
     </div>
